Remove internal from common public @Composable as it is not required for 1.4.0-rc03

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,6 @@ android.targetSdk=33
 android.minSdk=24
 
 #Versions
-kotlin.version=1.8.10
+kotlin.version=1.8.20
 agp.version=7.4.2
-compose.version=1.4.0-alpha01-dev975
+compose.version=1.4.0-rc03
