copy kmp template moko integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,8 @@ android.targetSdk=33
 android.minSdk=24
 
 #Versions
-kotlin.version=1.8.10
+kotlin.version=1.8.20
 agp.version=7.4.2
-compose.version=1.4.0-alpha01-dev975
+compose.version=1.4.0-rc03
+moko.resources.version=0.21.1
+moko.mvvm.version = 0.16.0
